--- a/Benchmarking/Benchmark/Benchmark.csproj
+++ b/Benchmarking/Benchmark/Benchmark.csproj
@@ -1,24 +1,29 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-  </PropertyGroup>
+    <PropertyGroup>
+        <OutputType>Exe</OutputType>
+        <TargetFramework>net9.0</TargetFramework>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="BenchmarkDotNet" Version="0.12.0" />
-    <PackageReference Include="Capnp.Net.Runtime" Version="1.3.97-g4f0abaac73" />
-    <PackageReference Include="CapnpC.CSharp.MsBuild.Generation" Version="1.3.97-g4f0abaac73" />
-    <PackageReference Include="Google.Protobuf" Version="3.15.0" />
-    <PackageReference Include="Grpc.Net.Client" Version="2.27.0" />
-    <PackageReference Include="Grpc.Tools" Version="2.27.0">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-  </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="Grpc.AspNetCore" Version="2.70.0"/>
 
-  <ItemGroup>
-    <Protobuf Include="Protos\Echo.proto" GrpcServices="Client" />
-  </ItemGroup>
+        <PackageReference Include="BenchmarkDotNet" Version="0.14.0"/>
+
+        <PackageReference Update="Nerdbank.GitVersioning">
+            <Version>3.7.115</Version>
+        </PackageReference>
+    </ItemGroup>
+
+    <ItemGroup>
+        <Protobuf Include="Protos\Echo.proto" GrpcServices="Client"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="../../Capnp.Net.Runtime/Capnp.Net.Runtime.csproj"/>
+        <ProjectReference Include="../../CapnpC.CSharp.MsBuild.Generation/CapnpC.CSharp.MsBuild.Generation.csproj"/>
+
+    </ItemGroup>
+
 
 </Project>
