--- a/Benchmarking/EchoServiceCapnp/EchoServiceCapnp.csproj
+++ b/Benchmarking/EchoServiceCapnp/EchoServiceCapnp.csproj
@@ -1,13 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-  </PropertyGroup>
+    <PropertyGroup>
+        <OutputType>Exe</OutputType>
+        <TargetFramework>net9.0</TargetFramework>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Capnp.Net.Runtime" Version="1.3.97-g4f0abaac73" />
-    <PackageReference Include="CapnpC.CSharp.MsBuild.Generation" Version="1.3.97-g4f0abaac73" />
-  </ItemGroup>
-
+    <ItemGroup>
+        <PackageReference Update="Nerdbank.GitVersioning">
+            <Version>3.7.115</Version>
+        </PackageReference>
+    </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="../../Capnp.Net.Runtime/Capnp.Net.Runtime.csproj"/>
+        <ProjectReference Include="../../CapnpC.CSharp.MsBuild.Generation/CapnpC.CSharp.MsBuild.Generation.csproj"/>
+    </ItemGroup>
 </Project>
