--- a/Benchmarking/EchoServiceGrpc/EchoServiceGrpc.csproj
+++ b/Benchmarking/EchoServiceGrpc/EchoServiceGrpc.csproj
@@ -1,17 +1,20 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
-	<PropertyGroup>
-		<TargetFramework>net9.0</TargetFramework>
-	</PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>net9.0</TargetFramework>
+    </PropertyGroup>
 
-	<ItemGroup>
-		<Protobuf Include="..\Benchmark\Protos\Echo.proto" GrpcServices="Server">
-			<Link>Protos\Echo.proto</Link>
-		</Protobuf>
-	</ItemGroup>
+    <ItemGroup>
+        <Protobuf Include="..\Benchmark\Protos\Echo.proto" GrpcServices="Server">
+            <Link>Protos\Echo.proto</Link>
+        </Protobuf>
+    </ItemGroup>
 
-	<ItemGroup>
-		<PackageReference Include="Grpc.AspNetCore" Version="2.24.0" />
-	</ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="Grpc.AspNetCore" Version="2.70.0"/>
+        <PackageReference Update="Nerdbank.GitVersioning">
+            <Version>3.7.115</Version>
+        </PackageReference>
+    </ItemGroup>
 
 </Project>
