--- a/Capnp.Net.Runtime.Tests/Capnp.Net.Runtime.Tests.csproj
+++ b/Capnp.Net.Runtime.Tests/Capnp.Net.Runtime.Tests.csproj
@@ -19,8 +19,7 @@
         <DefineConstants>DEBUG;TRACE</DefineConstants>
     </PropertyGroup>
 
-    <PropertyGroup
-            Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net9.0|AnyCPU'">
+    <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net9.0|AnyCPU'">
         <DefineConstants>TRACE</DefineConstants>
     </PropertyGroup>
 
@@ -29,20 +28,20 @@
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.9" />
-        <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.0.9" />
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
-        <PackageReference Include="MSTest.TestAdapter" Version="3.10.4" />
-        <PackageReference Include="MSTest.TestFramework" Version="3.10.4" />
-        <PackageReference Include="System.IO.Pipelines" Version="9.0.9" />
-        <PackageReference Include="System.Threading.Tasks.Dataflow" Version="9.0.9" />
+        <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="10.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="10.0.0" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.1" />
+        <PackageReference Include="MSTest.TestAdapter" Version="4.0.2" />
+        <PackageReference Include="MSTest.TestFramework" Version="4.0.2" />
+        <PackageReference Include="System.IO.Pipelines" Version="10.0.0" />
+        <PackageReference Include="System.Threading.Tasks.Dataflow" Version="10.0.0" />
         <PackageReference Update="Nerdbank.GitVersioning">
             <Version>3.7.115</Version>
         </PackageReference>
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Capnp.Net.Runtime\Capnp.Net.Runtime.csproj"/>
+        <ProjectReference Include="..\Capnp.Net.Runtime\Capnp.Net.Runtime.csproj" />
     </ItemGroup>
 
 </Project>
