--- a/CapnpC.CSharp.MsBuild.Generation/CapnpC.CSharp.MsBuild.Generation.csproj
+++ b/CapnpC.CSharp.MsBuild.Generation/CapnpC.CSharp.MsBuild.Generation.csproj
@@ -18,12 +18,12 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.VisualStudio.Composition"/>
-        <PackageReference Include="Microsoft.VisualStudio.ProjectSystem"/>
-        <PackageReference Include="Microsoft.VisualStudio.ProjectSystem.SDK"/>
-        <PackageReference Include="Microsoft.VisualStudio.ProjectSystem.SDK.Tools"/>
-        <PackageReference Include="Microsoft.VisualStudio.Threading"/>
-        <PackageReference Include="System.Collections.Immutable"/>
+        <PackageReference Include="Microsoft.VisualStudio.Composition" />
+        <PackageReference Include="Microsoft.VisualStudio.ProjectSystem" />
+        <PackageReference Include="Microsoft.VisualStudio.ProjectSystem.SDK" />
+        <PackageReference Include="Microsoft.VisualStudio.ProjectSystem.SDK.Tools" />
+        <PackageReference Include="Microsoft.VisualStudio.Threading" />
+        <PackageReference Include="System.Collections.Immutable" />
         <PackageReference Update="Nerdbank.GitVersioning">
             <Version>3.7.115</Version>
         </PackageReference>
@@ -36,32 +36,30 @@
     </ItemDefinitionGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.Build.Framework" Version="17.14.8" />
-        <PackageReference Include="Microsoft.Build.Utilities.Core" Version="17.14.8" />
-        <PackageReference Update="@(PackageReference)" PrivateAssets="All"/>
+        <PackageReference Include="Microsoft.Build.Framework" Version="18.0.2" />
+        <PackageReference Include="Microsoft.Build.Utilities.Core" Version="18.0.2" />
+        <PackageReference Update="@(PackageReference)" PrivateAssets="All" />
         <PackageReference Update="Microsoft.VisualStudio.Composition" Version="17.13.41" />
-        <PackageReference Update="Microsoft.VisualStudio.ProjectSystem" Version="17.9.380"/>
-        <PackageReference Update="Microsoft.VisualStudio.ProjectSystem.SDK" Version="17.9.380"/>
-        <PackageReference Update="Microsoft.VisualStudio.ProjectSystem.SDK.Tools" Version="17.9.380"/>
+        <PackageReference Update="Microsoft.VisualStudio.ProjectSystem" Version="17.9.380" />
+        <PackageReference Update="Microsoft.VisualStudio.ProjectSystem.SDK" Version="17.9.380" />
+        <PackageReference Update="Microsoft.VisualStudio.ProjectSystem.SDK.Tools" Version="17.9.380" />
         <PackageReference Update="Microsoft.VisualStudio.Threading" Version="17.14.15" />
-        <PackageReference Update="Microsoft.Xaml" Version="4.0.0.1"/>
-        <PackageReference Update="System.Collections.Immutable" Version="9.0.9" />
-        <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All"/>
+        <PackageReference Update="Microsoft.Xaml" Version="4.0.0.1" />
+        <PackageReference Update="System.Collections.Immutable" Version="10.0.0" />
+        <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All" />
     </ItemGroup>
 
     <ItemGroup>
-        <Compile Remove="FrameworkDependent\**\*.cs"/>
-        <Compile Include="FrameworkDependent\*.cs"/>
-        <None Include="FrameworkDependent\**\*.cs"/>
-        <Compile Include="FrameworkDependent\FullFramework\**\*.cs"
-                 Condition="'$(TargetFramework)' == '$(CapnpcCsharp_FullFramework_Tools_TFM)'"/>
-        <Compile Include="FrameworkDependent\DotNetCore\**\*.cs"
-                 Condition="'$(TargetFramework)' == '$(CapnpcCsharp_Core_Tools_TFM)'"/>
+        <Compile Remove="FrameworkDependent\**\*.cs" />
+        <Compile Include="FrameworkDependent\*.cs" />
+        <None Include="FrameworkDependent\**\*.cs" />
+        <Compile Include="FrameworkDependent\FullFramework\**\*.cs" Condition="'$(TargetFramework)' == '$(CapnpcCsharp_FullFramework_Tools_TFM)'" />
+        <Compile Include="FrameworkDependent\DotNetCore\**\*.cs" Condition="'$(TargetFramework)' == '$(CapnpcCsharp_Core_Tools_TFM)'" />
     </ItemGroup>
 
     <ItemGroup>
-        <Folder Include="FrameworkDependent\DotNetCore\"/>
-        <Folder Include="FrameworkDependent\FullFramework\"/>
+        <Folder Include="FrameworkDependent\DotNetCore\" />
+        <Folder Include="FrameworkDependent\FullFramework\" />
     </ItemGroup>
 
     <ItemGroup>
@@ -80,7 +78,7 @@
         <Reference Include="Microsoft.Build.Utilities.Core">
             <HintPath>Microsoft.Build.Utilities.Core</HintPath>
         </Reference>
-        <Reference Include="System.ComponentModel.Composition"/>
+        <Reference Include="System.ComponentModel.Composition" />
     </ItemGroup>
 
     <ItemGroup>
@@ -110,7 +108,7 @@
     </ItemGroup>
 
     <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-        <RemoveDir Directories="$(SolutionDir)\MsBuildGenerationTest\obj"/>
+        <RemoveDir Directories="$(SolutionDir)\MsBuildGenerationTest\obj" />
     </Target>
 
 </Project>
