--- a/CapnpC.CSharp.Generator.Tests/CapnpC.CSharp.Generator.Tests.csproj
+++ b/CapnpC.CSharp.Generator.Tests/CapnpC.CSharp.Generator.Tests.csproj
@@ -20,9 +20,7 @@
         <PackageReference Include="Mono.Cecil" Version="0.11.6" />
         <PackageReference Include="MSTest.TestAdapter" Version="4.0.2" />
         <PackageReference Include="MSTest.TestFramework" Version="4.0.2" />
-        <PackageReference Include="SpecFlow" Version="3.9.74" />
-        <PackageReference Include="SpecFlow.MsTest" Version="3.9.74" />
-        <PackageReference Include="SpecFlow.Tools.MsBuild.Generation" Version="3.9.74" />
+        <PackageReference Include="Reqnroll.MsTest" Version="3.2.1" />
         <PackageReference Update="Nerdbank.GitVersioning">
             <Version>3.7.115</Version>
         </PackageReference>
@@ -45,13 +43,6 @@
         <ProjectReference Include="..\CapnpC.CSharp.Generator\CapnpC.CSharp.Generator.csproj" />
     </ItemGroup>
 
-    <ItemGroup>
-        <SpecFlowFeatureFiles Update="CodeGenerator.feature">
-            <Generator>SpecFlowSingleFileGenerator</Generator>
-            <LastGenOutput>CodeGenerator.feature.cs</LastGenOutput>
-            <Generator Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'"></Generator>
-            <Generator Condition="'$(Configuration)|$(Platform)'=='ReleaseTest|AnyCPU'"></Generator>
-        </SpecFlowFeatureFiles>
-    </ItemGroup>
+
 
 </Project>
