--- a/CapnpC.CSharp.MsBuild.Generation/CapnpC.CSharp.MsBuild.Generation.csproj
+++ b/CapnpC.CSharp.MsBuild.Generation/CapnpC.CSharp.MsBuild.Generation.csproj
@@ -15,17 +15,13 @@
         <PackageOutputPath>..\bin\$(Configuration)</PackageOutputPath>
         <Configurations>Debug;Release</Configurations>
         <TargetFramework>net9.0</TargetFramework>
+        <LangVersion>13.0</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.VisualStudio.Composition" />
-        <PackageReference Include="Microsoft.VisualStudio.ProjectSystem" />
-        <PackageReference Include="Microsoft.VisualStudio.ProjectSystem.SDK" />
-        <PackageReference Include="Microsoft.VisualStudio.ProjectSystem.SDK.Tools" />
-        <PackageReference Include="Microsoft.VisualStudio.Threading" />
         <PackageReference Include="System.Collections.Immutable" />
         <PackageReference Update="Nerdbank.GitVersioning">
-            <Version>3.7.115</Version>
+            <Version>3.9.50</Version>
         </PackageReference>
     </ItemGroup>
 
@@ -39,11 +35,6 @@
         <PackageReference Include="Microsoft.Build.Framework" Version="18.0.2" />
         <PackageReference Include="Microsoft.Build.Utilities.Core" Version="18.0.2" />
         <PackageReference Update="@(PackageReference)" PrivateAssets="All" />
-        <PackageReference Update="Microsoft.VisualStudio.Composition" Version="17.13.41" />
-        <PackageReference Update="Microsoft.VisualStudio.ProjectSystem" Version="17.9.380" />
-        <PackageReference Update="Microsoft.VisualStudio.ProjectSystem.SDK" Version="17.9.380" />
-        <PackageReference Update="Microsoft.VisualStudio.ProjectSystem.SDK.Tools" Version="17.9.380" />
-        <PackageReference Update="Microsoft.VisualStudio.Threading" Version="17.14.15" />
         <PackageReference Update="Microsoft.Xaml" Version="4.0.0.1" />
         <PackageReference Update="System.Collections.Immutable" Version="10.0.0" />
         <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All" />
@@ -66,19 +57,6 @@
         <ProjectReference Include="..\CapnpC.CSharp.Generator\CapnpC.CSharp.Generator.csproj">
             <Private>true</Private>
         </ProjectReference>
-    </ItemGroup>
-
-    <ItemGroup>
-        <Reference Include="Microsoft.Build">
-            <HintPath>Microsoft.Build</HintPath>
-        </Reference>
-        <Reference Include="Microsoft.Build.Framework">
-            <HintPath>Microsoft.Build.Framework</HintPath>
-        </Reference>
-        <Reference Include="Microsoft.Build.Utilities.Core">
-            <HintPath>Microsoft.Build.Utilities.Core</HintPath>
-        </Reference>
-        <Reference Include="System.ComponentModel.Composition" />
     </ItemGroup>
 
     <ItemGroup>
