fix: add test case for generic issue and suposedly fix it

--- a/MsBuildGenerationTest/MsBuildGenerationTest.csproj
+++ b/MsBuildGenerationTest/MsBuildGenerationTest.csproj
@@ -19,6 +19,7 @@
 
 	<ItemGroup>
 		<CapnpFiles Include="Issue25.capnp" />
+		<CapnpFiles Include="IssueGenGeneric.capnp" />
 	</ItemGroup>
 
 	<ItemGroup>
