--- a/CapnpC.CSharp.Generator/CapnpC.CSharp.Generator.csproj
+++ b/CapnpC.CSharp.Generator/CapnpC.CSharp.Generator.csproj
@@ -17,7 +17,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="5.0.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.14.0" />
+    <PackageReference Include="CSharpier.Core" Version="1.2.1" />
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All" />
     <PackageReference Update="Nerdbank.GitVersioning">
       <Version>3.9.50</Version>
