--- a/Benchmarking/EchoServiceGrpc/EchoServiceGrpc.csproj
+++ b/Benchmarking/EchoServiceGrpc/EchoServiceGrpc.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
+    <TargetFrameworks>net8.0;net9.0;net10.0</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
