--- a/CapnpC.CSharp.MsBuild.Generation/CapnpC.CSharp.MsBuild.Generation.csproj
+++ b/CapnpC.CSharp.MsBuild.Generation/CapnpC.CSharp.MsBuild.Generation.csproj
@@ -14,7 +14,7 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageOutputPath>..\bin\$(Configuration)</PackageOutputPath>
     <Configurations>Debug;Release</Configurations>
-    <TargetFramework>net9.0</TargetFramework>
+    <TargetFrameworks>net10.0;net8.0;net9.0</TargetFrameworks>
     <LangVersion>13.0</LangVersion>
   </PropertyGroup>
 
