--- a/CapnpC.CSharp.MsBuild.Generation/CapnpC.CSharp.MsBuild.Generation.nuspec
+++ b/CapnpC.CSharp.MsBuild.Generation/CapnpC.CSharp.MsBuild.Generation.nuspec
@@ -19,8 +19,12 @@
     <files>
         <file src="build\**\*" target="build"/>
         <file src="buildMultiTargeting\**\*" target="buildMultiTargeting"/>
+        <file src="bin\$config$\net8.0\*.dll" target="tasks\net8.0"/>
+        <file src="bin\$config$\net8.0\*.deps.json" target="tasks\net8.0"/>
         <file src="bin\$config$\net9.0\*.dll" target="tasks\net9.0"/>
         <file src="bin\$config$\net9.0\*.deps.json" target="tasks\net9.0"/>
+        <file src="bin\$config$\net10.0\*.dll" target="tasks\net10.0"/>
+        <file src="bin\$config$\net10.0\*.deps.json" target="tasks\net10.0"/>
 
         <file src="..\Licenses\**\*" target="licenses"/>
         <file src="..\LICENSE" target="LICENSE"/>
