--- a/MsBuildGenerationTest/MsBuildGenerationTest.csproj
+++ b/MsBuildGenerationTest/MsBuildGenerationTest.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net9.0</TargetFramework>
+    <TargetFrameworks>net10.0;net8.0;net9.0</TargetFrameworks>
     <LangVersion>13.0</LangVersion>
     <Nullable>Enable</Nullable>
     <Configurations>Debug;Release</Configurations>
