--- a/capnpc-csharp/capnpc-csharp.csproj
+++ b/capnpc-csharp/capnpc-csharp.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net9.0</TargetFramework>
+    <TargetFrameworks>net10.0;net8.0;net9.0</TargetFrameworks>
     <RootNamespace>CapnpC</RootNamespace>
     <LangVersion>13.0</LangVersion>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
