chore: fix or suppress some build warnings

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -6,4 +6,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
   </ItemGroup>
+  <PropertyGroup>
+    <NoWarn>$(NoWarn);CS8981</NoWarn>
+  </PropertyGroup>
 </Project>
