--- a/CapnpC.CSharp.MsBuild.Generation.Tests/CapnpC.CSharp.MsBuild.Generation.Tests.csproj
+++ b/CapnpC.CSharp.MsBuild.Generation.Tests/CapnpC.CSharp.MsBuild.Generation.Tests.csproj
@@ -5,7 +5,21 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Build.Utilities.Core" Version="18.0.2" />
+    <PackageReference
+      Include="Microsoft.Build.Utilities.Core"
+      Version="18.0.2"
+      Condition="'$(TargetFramework)' == 'net10.0'"
+    />
+    <PackageReference
+      Include="Microsoft.Build.Utilities.Core"
+      Version="17.14.28"
+      Condition="'$(TargetFramework)' == 'net9.0'"
+    />
+    <PackageReference
+      Include="Microsoft.Build.Utilities.Core"
+      Version="17.11.48"
+      Condition="'$(TargetFramework)' == 'net8.0'"
+    />
     <PackageReference Update="Nerdbank.GitVersioning">
       <Version>3.9.50</Version>
     </PackageReference>
